@@ -19,7 +19,7 @@
 # This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 # KIND, either express or implied.
 #
-# $Id: curl-config.in,v 1.36 2009-03-20 12:42:29 bagder Exp $
+# $Id: curl-config.in,v 1.37 2009-11-14 19:23:26 claesjac Exp $
 ###########################################################################
 
 prefix=@prefix@
@@ -37,6 +37,7 @@ Available values for OPTION include:
   --cc        compiler
   --cflags    pre-processor and compiler flags
   --checkfor [version] check for (lib)curl of the specified version
+  --configure the arguments given to configure when building curl
   --features  newline separated list of enabled features
   --help      display this help and exit
   --libs      library linking information
@@ -145,6 +146,10 @@ while test $# -gt 0; do
     --static-libs)
 	echo @libdir@/libcurl.@libext@ @LDFLAGS@ @LIBCURL_LIBS@ @LIBS@
 	;;
+
+    --configure)
+      echo @CONFIGURE_OPTIONS@
+    ;;
 
     *)
         echo "unknown option: $1"
