@@ -18,7 +18,7 @@
 .\" * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 .\" * KIND, either express or implied.
 .\" *
-.\" * $Id: curl-config.1,v 1.17 2008-12-22 13:07:14 bagder Exp $
+.\" * $Id: curl-config.1,v 1.18 2009-11-14 19:23:26 claesjac Exp $
 .\" **************************************************************************
 .\"
 .TH curl-config 1 "25 Oct 2007" "Curl 7.17.1" "curl-config manual"
@@ -42,6 +42,8 @@ Specify the oldest possible libcurl version string you want, and this
 script will return 0 if the current installation is new enough or it 
 returns 1 and outputs a text saying that the current version is not new 
 enough. (Added in 7.15.4)
+.IP "--configure"
+Displays the arguments given to configure when building curl.
 .IP "--feature"
 Lists what particular main features the installed libcurl was built with. At
 the time of writing, this list may include SSL, KRB4 or IPv6. Do not assume
